[package]
name = "op-store-cert"
version = "0.1.0"
edition = "2021"
authors = ["Hroi Sigurdsson"]
description = "Store certificate as PEM files in 1Password"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
openssl = { version = "0.10.63", features = ["vendored"] }
tempfile = "3.9.0"
