[package]
name = "op-store-cert"
version = "0.1.0"
edition = "2021"
authors = ["Hroi Sigurdsson"]
description = "Store certificate as PEM files in 1Password"
repository = "https://github.com/hroi/op-store-cert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
openssl = { version = "0.10.63", features = ["vendored"] }
tempfile = "3.9.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "hroi/homebrew-op-store-cert"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
